# tucuxi-python

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  create_wheel_&_sdist.bat  pyproject.toml  setup.bat  setup.py  setup.sh  usefull_link.txt
doc/01_Tucuxi_core_API/: Makefile  conf.py  index.rst  make.bat  tucuxi_core.rst
doc/02_Add_New_Submodules/source/: conf.py  how_to_add_modules.rst
doc/02_Add_New_Submodules/source/_static/: style.css
examples/: query_example.py  tests.py  utils.py  wrapper.py
examples/data_input/drugfiles/: ch.tucuxi.imatinib.gotta2012.tdd
sotalya/: __init__.py
sotalya/pycli/: .gitignore  CMakeLists.txt  __init__.py
sotalya/pycli/tucupywrap/: wrapcomputer.cpp  wrapcomputer.h  wrapper.cpp  wrapper.h  wraputils.cpp  wraputils.h
sotalya/tucuxi/: __init__.py  utils.py
sotalya/tucuxi/data/: admin.py  computingqueryresponse.py  pendingrequest.py  plotter.py  prdrugtreatment.py  query.py  requests.py  xpertrequests.py
sotalya/tucuxi/importexport/: exportpendingrequest.py  exporttqf.py
sotalya/tucuxi/processing/: querytopendingrequest.py  translatortoquery.py  tucuxirun.py
sotalya/tucuxi/templates/: list_template.xml  query_template.tqf  request_for_list_template.xml  request_template.xml
tests/: test_computing.py  utils.py
tests/data_input/computing-queries/: ch.tucuxi.imatinib.gotta2012.2.tqf
tests/data_input/drugfiles/: ch.tucuxi.tobramycin.hennig2013.tdd
