[build-system]
requires = ["setuptools", "scikit-build", "pybind11", "py-build-cmake", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "sotalya"
version = "1.0.0"
description="A python module for tucuxicore"
readme = "README.md"
authors = [
  { name = "Tucuxi", email = "yann.thoma@heig-vd.ch" },
]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
    # python-common tucuxi dependencies
    "beautifulsoup4 >= 4.12",
    "colorama >= 0.4",
    "matplotlib >= 3.7",
    "numpy >= 1.21",
    "pytest >= 6.0",
]

[tool.scikit-build]
# The minimum version of CMake to use. If CMake is not present on the system or
# is older than this, it will be downloaded via PyPI if possible. An empty
# string will disable this check.
cmake.minimum-version = "3.15"


# The build directory. Defaults to a temporary directory, but can be set.
build-dir = "build"

# A list of license files to include in the wheel. Supports glob patterns.
wheel.license-files = ["LICEN[CS]E*", "COPYING*", "NOTICE*"]

wheel.install-dir = "sotalya_package"

sdist.include = ["*.pyd", "*.py"]
sdist.exclude = [".github"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "info"
testpaths = [
  "tests",
]